<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Question">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/question"
            android:layout_width="wrap_content"
            android:layout_height="62dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/question"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="325dp"
            android:layout_marginTop="10dp"
            android:gravity="center|center_horizontal"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/contador"
                android:layout_width="84dp"
                android:layout_height="92dp"
                android:maxHeight="50dp"
                app:srcCompat="@drawable/kahoot_tiempo" />

            <ImageView
                android:id="@+id/test"
                android:layout_width="227dp"
                android:layout_height="203dp"
                android:layout_marginLeft="10dp"
                app:srcCompat="@drawable/kahoot_actividad2_central" />

            <Button
                android:id="@+id/omitir"
                android:layout_width="50dp"
                android:layout_height="43dp"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:backgroundTint="#1632CA"
                android:text="@string/omitir"
                tools:ignore="TouchTargetSizeCheck" />

        </LinearLayout>

        <Button
            android:id="@+id/red"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginTop="10dp"
            android:backgroundTint="#FB0000"
            android:text="@string/red" />

        <Button
            android:id="@+id/orange"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginTop="10dp"
            android:backgroundTint="#FFBF00"
            android:text="@string/orange" />

        <Button
            android:id="@+id/blue"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginTop="10dp"
            android:backgroundTint="#1737E8"
            android:text="@string/blue" />

        <Button
            android:id="@+id/green"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginTop="10dp"
            android:backgroundTint="#0C7C11"
            android:text="@string/green" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>